<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jericopingul.wodtimer.MainActivity">

    <Button
        android:text="@string/tabata_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tabata_button"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/amrap_button"
        android:layout_alignRight="@+id/amrap_button"
        android:layout_alignEnd="@+id/amrap_button"
        android:layout_alignLeft="@+id/amrap_button"
        android:layout_alignStart="@+id/amrap_button"
        android:onClick="runTabataActivity" />

    <Button
        android:text="@string/exmom_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exmom_button"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/emom_button"
        android:layout_alignLeft="@+id/emom_button"
        android:layout_alignStart="@+id/emom_button"
        android:layout_alignRight="@+id/emom_button"
        android:layout_alignEnd="@+id/emom_button"
        android:onClick="runExmomActivity" />

    <Button
        android:text="@string/amrap_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/amrap_button"
        android:layout_below="@+id/stopwatch_button"
        android:layout_alignRight="@+id/stopwatch_button"
        android:layout_alignEnd="@+id/stopwatch_button"
        android:layout_alignLeft="@+id/stopwatch_button"
        android:layout_alignStart="@+id/stopwatch_button"
        android:onClick="runAmrapActivity" />

    <Button
        android:text="@string/emom_label"
        android:layout_width="wrap_content"
        android:id="@+id/emom_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/tabata_button"
        android:layout_alignLeft="@+id/tabata_button"
        android:layout_alignStart="@+id/tabata_button"
        android:layout_alignRight="@+id/tabata_button"
        android:layout_alignEnd="@+id/tabata_button"
        android:onClick="runEmomActivity" />

    <Button
        android:text="@string/stopwatch_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/stopwatch_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="runStopwatchActivity" />
</RelativeLayout>
